the login, signup working now

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,4 +1,4 @@
-<h1>Hard  code no database yet</h1>
+
 <table class="table border my-2">
   <thead>
           <tr>
@@ -35,7 +35,7 @@
         </tbody>
       </table>
 
-      {{/each}};
+      {{/each}}
 
 
 
