--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,7 +16,7 @@
   <body>
     <nav class="container navbar navbar-expand-lg navbar-light border-bottom">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Stock Alert Tracker</a>
+        <a class="navbar-brand" href="/">Stock Alert Tracker</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -31,13 +31,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/alert">Alerts</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/alert">Signup</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/login">Login</a>
@@ -68,8 +65,13 @@
 
   <!-- Render script for logged in users only -->
   {{#if logged_in}}
-  <script src="/js/logout.js"></script>
+  {{!-- <script src="/js/logout.js"></script> --}}
   {{/if}}
+  <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
 </body>
 
 </html>
