--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,42 +1,32 @@
-<div class="row">
-  <div class="col-md-6">
-    <h2>Login</h2>
-
-    <form class="form login-form">
-      <div class="form-group">
-        <label for="email-login">email:</label>
-        <input class="form-input" type="text" id="email-login" />
-      </div>
-      <div class="form-group">
-        <label for="password-login">password:</label>
-        <input class="form-input" type="password" id="password-login" />
-      </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit">login</button>
-      </div>
-    </form>
-  </div>
-  <div class="col-md-6">
-    <h2>Signup</h2>
-
-    <form class="form signup-form">
-      <div class="form-group">
-        <label for="name-signup">name:</label>
-        <input class="form-input" type="text" id="name-signup" />
-      </div>
-      <div class="form-group">
-        <label for="email-signup">email:</label>
-        <input class="form-input" type="text" id="email-signup" />
-      </div>
-      <div class="form-group">
-        <label for="password-signup">password:</label>
-        <input class="form-input" type="password" id="password-signup" />
-      </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit">signup</button>
-      </div>
-    </form>
-  </div>
-</div>
-
-<script src="./js/login.js"></script>
+<div class="container">
+        <div class="row row-login">
+            <div class="col-10 col-sm-6 col-md-4 offset-1 offset-sm-3 offset-md-4">
+                <h1 class="text-center">Login</h1>
+                <div>
+                    <div class="card-body">
+                        <h5 class="text-danger text-center">Please enter your login and password </h5>
+                        <form id="loginform">
+                            <div class="form-group mb-3">
+                              <label class="form-label">Email </label>
+                              <input class="form-control" type="text" placeholder="Your Email" id="email_login" required>
+                            </div>
+                            <div class="form-group mb-3">
+                              <label class="form-label">Password </label>
+                              <input class="form-control" type="password" placeholder="Your Password" id="password_login" required>
+                            </div>
+                            <div class="form-group mb-3">
+                                <div class="form-check">
+                                  <input class="form-check-input" type="checkbox" id="formCheck-1">
+                                  <label class="form-check-label" for="formCheck-1">Remember me</label> 
+                                  <a class="btn btn-link center-block" role="button" href="/forgetpass">Forget Password?</a>
+                                </div>
+                            </div>
+                            <button class="btn btn-success d-block w-100" type="submit">LOGIN </button>
+                            <p class="text-center">Don't have an account? <a href="/signup" class="text-success fw-bold">Sign Up</a>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="./js/login.js"></script>
