--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -37,7 +37,13 @@
               <a class="nav-link" href="/alert">Alerts</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/login">Login</a>
+              <a id="login" class="nav-link" href="/login">Login</a>
+            </li>
+            <li class="nav-item">
+              <a id="log-out" class="nav-link" href="/logout">Logout</a>
+            </li>
+            <li class="nav-item">
+              <a id="profile" class="nav-link" href="/profile">Profile</a>
             </li>
           </ul>
           <form class="d-flex">
