--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,42 +1,37 @@
 
+
+{{#if loggedIn}}
+{{#each alerts as |alert|}}
 <table class="table border my-2">
-  <thead>
+  <thead class="table-dark">
           <tr>
-            {{!-- <th scope="col">User</th> --}}
+            <th scope="col">User</th>
             <th scope="col">Ticker</th>
             <th scope="col">Entry</th>
-            <th scope="col">Shares</th>
-            <th scope="col">Bid/Ask</th>
-            <th scope="col">Current</th>
-            <th scope="col">Open/Closed</th>
-            {{!-- <th scope="col">Open Time</th> --}}
+            <th scope="col">Entry Price</th>
+            <th scope="col">Current Price</th>
+            <th scope="col">Status</th>
+            <th scope="col">Time</th>
             {{!-- <th scope="col">Closed Time</th>
             <th scope="col">Trade Gain</th> --}}
           </tr>
         </thead>
-</table>
-
-{{#each alerts as |alert|}}
-<table class="table border my-2">
-        
         <tbody>
           <tr>
+            <td>{{alert.user.username}}</td>
             <td>{{alert.ticker}}</td>
-
             <td>{{alert.entry}}</td>
-            <td>{{alert.shares}}</td>
             <td>{{alert.entry_price}}</td>
             <td>{{alert.current_price}}</td>
-            <td>10:00</td>
-            {{!-- <td>9:50AM</td>
-            <td>10:50AM</td>
-            <td>90%</td> --}}
+            <td>{{alert.status}}</td>
+            <td>{{format_time alert.createdAt}} {{format_date alert.createdAt}}</td>
           </tr>
         </tbody>
       </table>
-
       {{/each}}
 
-
+      {{else}}
+      <a href="/login">You must to login to view the alert</a>
+      {{/if}}
  {{!-- <script src="./js/homepage.js"></script> --}}
 
