--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -33,12 +33,25 @@
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="/">Home</a>
             </li>
+            {{#if loggedIn}}
             <li class="nav-item">
               <a class="nav-link" href="/alert">Alerts</a>
             </li>
-            <li class="nav-item">
+            <li id="profile" class="nav-item">
+              <a class="nav-link" href="/profile">Profile</a>
+            </li>
+            <li id="logout" class="nav-item">
+              <a class="nav-link" href="#">Logout</a>
+            </li>
+            {{else}}
+             <li id="login" class="nav-item">
               <a class="nav-link" href="/login">Login</a>
             </li>
+            <li id="sign-up" class="nav-item">
+              <a class="nav-link" href="/signup">Register</a>
+            </li>
+            {{/if}}
+
           </ul>
           <form class="d-flex">
             <input
@@ -54,19 +67,18 @@
         </div>
       </div>
     </nav>
-    <main class="container container-fluid mt-5">
+    <main class="container">
       <!-- Render the sub layout -->
       {{{ body }}}
     </main>
-    <footer>
-      
-    </footer>
   </div>
 
   <!-- Render script for logged in users only -->
-  {{#if logged_in}}
-  {{!-- <script src="/js/logout.js"></script> --}}
-  {{/if}}
+ 
+{{#if loggedIn}}
+  <script src="/js/logout.js"></script>
+{{/if}}
+  
   <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
