--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,7 +11,7 @@
       integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
       crossorigin="anonymous"
     />
-    <!-- <link rel="stylesheet" src="./src/style.css" /> -->
+    <link rel="stylesheet" src="../../public/css/style.css" />
   </head>
   <body>
     <nav class="container navbar navbar-expand-lg navbar-light border-bottom">
@@ -71,7 +71,7 @@
       <!-- Render the sub layout -->
       {{{ body }}}
     </main>
-  </div>
+
 
   <!-- Render script for logged in users only -->
  
@@ -84,6 +84,7 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
+    
 </body>
 
 </html>
