--- a/views/createalert.handlebars
+++ b/views/createalert.handlebars
@@ -2,7 +2,7 @@
 
         <h1 class="text-center">Create Your <span>Alert!</span></h1>
         <form class="form">
-            <table class="table border my-2">
+            <table class="table table-responsive border my-2">
   <thead class="table-dark">
           <tr>
             <th scope="col">Ticker</th>
@@ -10,7 +10,7 @@
             <th scope="col">Entry Price</th>
             <th scope="col">Target</th>
             <th scope="col">Stoploss</th>
-            <th scope="col">Current Price</th>
+            {{!-- <th scope="col">Current Price</th> --}}
             
           </tr>
         </thead>
@@ -23,9 +23,9 @@
                 <select class="form-input" type="text" id="entry" required>
                     <option value="none" selected disabled hidden>SELECT AN OPTION</option>
                     <option value="LONG">Long</option>
-                    <option value="SELL TO CLOSE">Sell To Close</option>
+                    {{!-- <option value="SELL TO CLOSE">Sell To Close</option> --}}
                     <option value="SHORT">Short</option>
-                    <option value="BUY TO CLOSE">Buy To Close</option>
+                    {{!-- <option value="BUY TO CLOSE">Buy To Close</option> --}}
                 </select>
             </td>
             <td>
@@ -36,9 +36,6 @@
             </td>
             <td>
                 <input class="form-input" type="text" id="stoploss" required />
-            </td>
-            <td>
-                <input class="form-input" type="text" id="current-price"/>
             </td>
           </tr>
         </tbody>
