add the href to the Ticker, so we can click on the ticker to go to closed or delete

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -5,7 +5,7 @@
   <div class="col">
     <div class="card my-5" style="width: 18rem; ">
   <div class="card-body bg-success text-center">
-    <h5 class="card-title ">{{ticker}} <span class="text-danger">({{status}})</span></h5>
+    <h5 class="card-title text-dark"><a data-id="{{id}}" href="/alert/{{alert.id}}">{{ticker}}</a> <span class="text-danger">({{status}})</span></h5>
   </div>
   <ul class="list-group list-group-flush">
       <li class="list-group-item">
