add the slide for homepage & working on searching routes

--- a/views/closealert.handlebars
+++ b/views/closealert.handlebars
@@ -17,7 +17,7 @@
                 <input class="form-input" type="text" id="ticker" required />
             </td> --}}
             <td>
-                <select class="form-input" type="text" id="entry" required>
+                <select class="form-input" type="text" id="closed-entry" required>
                     <option value="none" selected disabled hidden>SELECT AN OPTION</option>
                     {{!-- <option value="LONG">Long</option> --}}
                     <option value="SELL TO CLOSE">Sell To Close</option>
