--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,12 +11,12 @@
       integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" src="../../public/css/style.css" />
+    {{!-- <link rel="stylesheet" src="../../public/css/style.css" /> --}}
   </head>
   <body>
     <nav class="container navbar navbar-expand-lg navbar-light border-bottom">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/"><img class="rounded-circle" src="./img/logo.png" width="80" height="60" alt=""></a>
+        <a class="navbar-brand" href="/"><img class="rounded-circle" src="/img/logo.png" width="80" height="60" alt=""></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -38,7 +38,7 @@
               <a class="nav-link" href="/alert">Alerts</a>
             </li>
             <li id="profile" class="nav-item">
-              <a class="nav-link" href="/profile">Profile</a>
+              <a class="nav-link" href="/profile/{{userID}}">Profile</a>
             </li>
             <li id="logout" class="nav-item">
               <a class="nav-link" href="#">Logout</a>
@@ -54,14 +54,14 @@
 
           </ul>
           
-          <form class="d-flex" type="search" action="/search" id="search-form">
-            <input
+          <form class="d-flex" type="search" >
+            <input id="search-ticker"
               class="form-control me-2"
               type="search"
               placeholder="AAPL, TSLA, AMZN..."
               aria-label="Search"
             />
-            <button class="btn btn-outline-success" type="submit" id="search-btn">
+            <button class="btn btn-outline-success" id="search-btn" type="submit">
               Search
             </button>
           </form>
@@ -79,7 +79,7 @@
 {{#if loggedIn}}
   <script src="/js/logout.js"></script>
 {{/if}}
-  
+  <script src='/js/search.js'></script>
   <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
