--- a/views/oldhomepage.handlebars
+++ b/views/oldhomepage.handlebars
@@ -34,3 +34,87 @@
           </tr>
         </tbody>
       </table>
+
+
+
+
+
+
+
+
+      {{!-- table create alert --}}
+       <h1 class="text-center">Create Your <span>Alert!</span></h1>
+        <form class="form">
+            <table class="table table-responsive border my-2">
+  <thead class="table-dark">
+          <tr>
+            <th scope="col">Ticker</th>
+            <th scope="col">Entry(LONG/SHORT)</th>
+            <th scope="col">Entry Price</th>
+            <th scope="col">Target</th>
+            <th scope="col">Stoploss</th>
+            {{!-- <th scope="col">Current Price</th> --}}
+            
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>
+                <input class="form-input" type="text" id="ticker" required />
+            </td>
+            <td>
+                <select class="form-input" type="text" id="entry" required>
+                    <option value="none" selected disabled hidden>SELECT AN OPTION</option>
+                    <option value="LONG">Long</option>
+                    <option value="SHORT">Short</option>
+                    {{!-- <option value="BUY TO CLOSE">Buy To Close</option> --}}
+                </select>
+            </td>
+            <td>
+                <input class="form-input" type="text" id="entry-price" required />
+            </td>
+            <td>
+                <input class="form-input" type="text" id="target" required /> 
+            </td>
+            <td>
+                <input class="form-input" type="text" id="stoploss" required />
+            </td>
+          </tr>
+        </tbody>
+      </table>
+       <div class="form-group text-end">
+                <input id="alert-submit" class="btn btn-primary" type="submit" value="Submit">
+        </div>
+        </form>
+
+
+        {{!-- closed table  --}}
+
+        <h1 class="text-center">Closing The Alert</h1>
+        <form class="form">
+            <table class="table border my-2">
+        <thead class="table-dark">
+          <tr>
+            <th scope="col">Sell/Buy To Closed</th>
+            <th scope="col">Closed Price</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>
+                <select class="form-input" type="text" id="closed-entry" required>
+                    <option value="none" selected disabled hidden>SELECT AN OPTION</option>
+                    <option value="SELL TO CLOSE">Sell To Close</option>
+                    <option value="BUY TO CLOSE">Buy To Close</option>
+                </select>
+            </td>
+            <td>
+                <input class="form-input" type="text" id="closed-price" required />
+            </td>
+          </tr>
+        </tbody>
+      </table>
+       <div class="form-group text-end">
+                <input id="close-alert-submit" data-id="{{id}}" class="btn btn-primary" type="submit" value="Submit">
+        </div>
+        </form>
