--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,28 +1,26 @@
+
+{{#each ids as |profile|}}
 <div class="row">
   <div class="col-auto">
-    <h2>Welcome, {{username}}!</h2>
+    <h2>Hello, {{profile.username}}!</h2>
   </div>
 </div>
-
+{{/each}}
 <div class="row mt-4">
   <div class="col-md-6">
-    <h3>Create a New Project:</h3>
+    <h3>Change Your Username:</h3>
 
-    <form class="form new-project-form">
+    <form class="form">
       <div class="form-group">
-        <label for="project-name">project name:</label>
-        <input class="form-input" type="text" id="project-name" name="project-name" />
+        <label for="">Username:</label>
+        <input class="form-input" type="text" id="user-name" name="user-name" />
       </div>
       <div class="form-group">
-        <label for="project-funding">needed funding ($):</label>
-        <input class="form-input" type="number" id="project-funding" name="project-funding" />
+        <label for="email">Email:</label>
+        <input class="form-input" id="change-password" name="project-desc"></input>
       </div>
       <div class="form-group">
-        <label for="project-desc">description:</label>
-        <textarea class="form-input" id="project-desc" name="project-desc"></textarea>
-      </div>
-      <div class="form-group">
-        <button type="submit" class="btn btn-primary">Create</button>
+        <button type="submit" class="btn btn-primary">Update Profile</button>
       </div>
     </form>
   </div>
