fixed the profited calculator, add the footer on homepage, & validate for email, pass & required when insert value

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -35,7 +35,7 @@
             </li>
             {{#if loggedIn}}
             <li class="nav-item">
-              <a class="nav-link" href="/alert">Alerts</a>
+              <a class="nav-link" href="/alert">CreateAlert</a>
             </li>
             <li id="profile" class="nav-item">
               <a class="nav-link" href="/profile/{{userID}}">Profile</a>
@@ -74,6 +74,9 @@
     </main>
 
 
+  <div class="container bg-light my-5">
+    <p class="text-center">© 2022 Colin, Will, Harris, Charnay</p>
+  </div>
   <!-- Render script for logged in users only -->
  
 {{#if loggedIn}}
