--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -1,4 +1,6 @@
 <section class="container px-4 my-2">
+  <ul id="symbol-list">
+        </ul>
 <div class="row row-cols-auto">
   {{#if tickers}}
   {{#each tickers as |ticker|}}
