--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -8,11 +8,11 @@
                         <form id="loginform">
                             <div class="form-group mb-3">
                               <label class="form-label">Email </label>
-                              <input class="form-control" type="text" placeholder="Your Email" id="email_login" required>
+                              <input class="form-control" type="text" placeholder="Your Email" id="email_login" required="" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,15}$" inputmode="email">
                             </div>
                             <div class="form-group mb-3">
                               <label class="form-label">Password </label>
-                              <input class="form-control" type="password" placeholder="Your Password" id="password_login" required>
+                              <input class="form-control" type="password" placeholder="Your Password" id="password_login" required="">
                             </div>
                             <div class="form-group mb-3">
                                 <div class="form-check">
