--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -13,6 +13,7 @@
                               class="form-control" 
                               type="text" 
                               name="username"
+                              required=""
                               placeholder="Username" 
                               id="create_username" />
                             </div>
@@ -24,6 +25,7 @@
                               type="text" 
                               name="email"
                               placeholder="Your Email" 
+                              required="" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,15}$" inputmode="email"
                               id="create_email" />
                             </div>
                             <div class="form-group mb-3">
@@ -32,6 +34,7 @@
                               class="form-control" 
                               type="password" 
                               name="pass"
+                              required=""
                               placeholder="Your Password" 
                               id="create_password" />
                             </div>
