--- a/views/viewalert.handlebars
+++ b/views/viewalert.handlebars
@@ -53,20 +53,22 @@
   <div class="card-body bg-light text-center">
       <h3 class="card-title text-center">Closed Your Alert!</h3>
   </div>
+  <form>
   <ul class="list-group list-group-flush">
     <li class="list-group-item"><span for="img" aria-label="price">🛍</span> 
-    <select class="form-input" type="text" id="closed-entry" required>
+    <select class="form-input" type="text" id="closed-entry" required="">
             <option value="none" selected disabled hidden>SELECT AN OPTION</option>
-            <option value="SELL TO CLOSE">Sell To Close ⬆</option>
-            <option value="BUY TO CLOSE">Buy To Close ⬇</option>
+            <option value="SELL TO CLOSE">Sell To Close (Long⬆)</option>
+            <option value="BUY TO CLOSE">Buy To Close (Short⬇)</option>
     </select>
-    <li class="list-group-item"><span for="img" aria-label="price">💲</span> Enter Close Price: <input class="form-input" type="text" id="closed-price" required />
+    <li class="list-group-item"><span for="img" aria-label="price">💲</span> Enter Close Price: <input class="form-input" type="text" id="closed-price" required="" />
     </li>
     <li class="list-group-item">
       <input id="close-alert-submit" data-id="{{id}}" class="btn btn-primary text-end" type="submit" value="Submit">
     </li>
     
   </ul>
+  </form>
 </div>
   </div>
        
