added current_price to handlebars for homepage on alert display

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -64,6 +64,7 @@
    </li>
     <li class="list-group-item"><span for="img" aria-label="price">🛍</span> Open : {{entry}}</li>
     <li class="list-group-item"><span for="img" aria-label="price">💲</span> Entry Price: {{entry_price}}</li>
+    <li class="list-group-item"><span for="img" aria-label="price">💲</span> Current Price: {{current_price}}</li>
     <li class="list-group-item"><span for="img" aria-label="target">🎯</span> Target: {{target}}</li>
     <li class="list-group-item"><span for="img" aria-label="stoploss">🛑</span> Stoploss: {{stoploss}}</li>
    {{#if closed_price}} 
