add demo readmefile, add current price all the page when view

--- a/views/closealert.handlebars
+++ b/views/closealert.handlebars
@@ -16,6 +16,7 @@
                     <option value="SHORT">Short ⬇</option>
                 </select>
     <li class="list-group-item"><span for="img" aria-label="price">💲</span> Entry Price: <input class="form-input" type="text" id="entry-price" required /></li>
+    <li class="list-group-item"><span for="img" aria-label="price">💲</span> Current Price: {{current_price}}</li>
     <li class="list-group-item"><span for="img" aria-label="target">🎯</span> Target: <input class="form-input" type="text" id="target" required /> </li>
     <li class="list-group-item"><span for="img" aria-label="stoploss">🛑</span> Stoploss: <input class="form-input" type="text" id="stoploss" required /></li>
    <li class="list-group-item"><input id="alert-submit" class="btn btn-primary" type="submit" value="Submit"></li>
