--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -25,6 +25,7 @@
    </li>
     <li class="list-group-item"><span for="img" aria-label="price">🛍</span> Open : {{ticker.entry}}</li>
     <li class="list-group-item"><span for="img" aria-label="price">💲</span> Entry Price: {{entry_price}}</li>
+    <li class="list-group-item"><span for="img" aria-label="price">💲</span> Current Price: {{current_price}}</li>
     <li class="list-group-item"><span for="img" aria-label="target">🎯</span> Target: {{target}}</li>
     <li class="list-group-item"><span for="img" aria-label="stoploss">🛑</span> Stoploss: {{stoploss}}</li>
    {{#if closed_price}} 
